<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_size_w"
    android:layout_height="@dimen/dialog_size_h"
    android:background="#ffffffff"
    android:id="@+id/lay_qr_code">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/qr_code"
        android:src="@drawable/qrcode_pix" />
        

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:background="@drawable/background_linear_to_donw"
        android:onClick="onConfirmPix"
        android:text="@string/yes"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:background="@drawable/background_linear_to_donw"
        android:onClick="onCancelPix"
        android:text="@string/cancel"
        android:textColor="@color/white" />
</RelativeLayout>