<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.Main"
    android:background="@color/cor_clara">

     <RelativeLayout
         android:id="@+id/lay_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/action_bar"
         android:background="@drawable/background_linear_to_donw"
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="center_vertical"
         android:paddingHorizontal="@dimen/padding">
         <TextView
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lay_init"
             android:textColor="@color/white"
             android:textSize="@dimen/font_big"/>
         <ImageView
             android:onClick="onLogout"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_width="@dimen/ic_size"
             android:layout_height="@dimen/ic_size"
             android:src="@drawable/ic_logout"/>
     </RelativeLayout>

    <RelativeLayout
        android:id="@+id/block_alunos"
        android:onClick="onAlunos"
        android:layout_width="@dimen/w_block_select"
        android:layout_height="@dimen/h_block_select"
        android:background="@drawable/block_shape"
        app:layout_constraintTop_toBottomOf="@id/lay_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menssalidades"
        android:layout_marginTop="@dimen/margin_top_block"
        android:padding="@dimen/padding">
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@drawable/ic_alunos"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/txt_alunos"
            android:textColor="@color/white"
            android:textSize="@dimen/font_big" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/menssalidades"
        android:onClick="onMensalidades"
        android:layout_width="@dimen/w_block_select"
        android:layout_height="@dimen/h_block_select"
        android:background="@drawable/block_shape"
        app:layout_constraintTop_toBottomOf="@id/lay_top"
        app:layout_constraintStart_toEndOf="@id/block_alunos"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_block"
        android:padding="@dimen/padding">
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@drawable/ic_mensalidades"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_smoll"
            android:text="@string/txt_mensalidades"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:onClick="onShere"
        android:id="@+id/envi_fixa"
        android:layout_width="@dimen/w_block_select"
        android:layout_height="@dimen/h_block_select"
        android:background="@drawable/block_shape"
        app:layout_constraintTop_toBottomOf="@id/block_alunos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menssalidades"
        android:layout_marginTop="@dimen/margin_top_block"
        android:padding="@dimen/padding">
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@drawable/ic_enviar_convite_de_cadastro"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/txt_env_conv_ins"
            android:textColor="@color/white"
            android:textSize="@dimen/font_big" />
    </RelativeLayout>
    <RelativeLayout
        android:onClick="onCriarCadastro"
        android:id="@+id/cadastrar_aluno"
        android:layout_width="@dimen/w_block_select"
        android:layout_height="@dimen/h_block_select"
        android:background="@drawable/block_shape"
        app:layout_constraintTop_toBottomOf="@id/block_alunos"
        app:layout_constraintStart_toEndOf="@id/block_alunos"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_block"
        android:padding="@dimen/padding">
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:src="@drawable/ic_novo_cadastro"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/txt_criar_cadastro"
            android:textColor="@color/white"
            android:textSize="@dimen/font_big" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>